# switch-lan-play

./: .travis.yml  CMakeLists.txt
cmake/: toolchain-arm-linux-androideabi.cmake
docker/: Dockerfile.android
src/: main.c  pcaploop.c
